--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Two test React components",
   "author": "thilak",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.17.0",
