--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "thilak90": "^0.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,9 +46,12 @@
   },
   "main": "src/lib/index.js",
   "module": "src/lib/index.js",
-  "files": [ "lib", "README.md" ],
+  "files": [
+    "src/lib/components/Button.js",
+    "README.md"
+  ],
   "repository": {
-      "type": "git",
-      "url": "https://github.com/thilakace/sample-npm-react"
+    "type": "git",
+    "url": "https://github.com/thilakace/sample-npm-react"
   }
 }
